# articles

./: .gitignore  README.md
ansible/: ansible.md  my_inventory  playbook.yml
btrfs/: btrfs.md
combinators/: Cargo.toml  README.md  create_main.py  elements.csv  rust_iterators.md
combinators/src/: element.rs  main.rs
fileread/: Cargo.toml  ipv4.txt
go_regexp/: gore.md
iptables/: iptables.md
latex_doc/: latexdoc.md
lxc/: lxc.md
mitmproxy/: block-adds.py  block-urls.py  mimtproxy.md  test.py  urls.txt
python_generators/: a1.py  a2.py  extract.py  python_generators.md
python_lists/: a1.py  a2.py  a3.py  a4.py  a5.py  a6.py
python_meta/: a1.py  a2.py  a3.py  a4.py  a5.py  py_metaclasses.md
rpe/: rpe.md
rsa/: der.py  hex.py  key512.pem  rsa.md  rsa_math.md
ruby_arrays/: a1.rb  a2.rb  a3.rb  a4.rb  a5.rb  a6.rb  a7.rb  ruby_arrays.md
rust_errors/: rust_errors.md
rust_ffi/: rust_ffi.md
rust_modules/: Cargo.toml  rust_modules.md
rust_threads/: first_shot  lscpu.txt  threads_part1.md  threads_part2.md  threads_part3.md
rust_threads/rthreads/: Cargo.toml  bench.sh
rust_threads/rthreads/results/: results_1.txt
rust_threads/rthreads/src/: chunks.rs  sample.rs  sample2.rs
rust_threads/rthreads/src/factorial/: fact.rs
rust_threads/rthreads/src/thread_with_crossbeam/: thread2.rs
rust_threads/rthreads/src/thread_without_crate/: thread1.rs
rust_threads/rthreads/src/together/: thread_compare.rs
rust_vectors/: a1.rs  extract.py  iter.rs  rust_vectors.md  test.rs
rust_wasm/: rust_wasm.md
yarit/: a2.rs  backup.md  test.rs  yarit.md
(+80 files in other folders)
